--- a/_posts/2015-10-20-math.md
+++ b/_posts/2015-10-20-math.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: a post with math with some more MATH
+title: a post with math with some more MATHXXXXXXXXXXXXXXXXXXXXXXx
 date: 2015-10-20 11:12:00-0400
-description: an example of a blog post with some math
+description: an example of a blog post with some 
 tags: formatting math
 categories: sample-posts
 ---
