--- a/_posts/2015-10-20-math.md
+++ b/_posts/2015-10-20-math.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: a post with math with some more MATHXXXXXXXXXXXXXXXXXXXXXXxxxx
+title: a post with math with some more MATH XXXXXXXXXXxxxx
 date: 2015-10-20 11:12:00-0400
 description: an example of a blog post with some 
 tags: formatting math
